tests/fixtures/functional_patterns/negative/n31_slice_len.rs
fn is_empty(slice: &[i32]) -> bool {
    slice.len() == 0
}
